# xarecar-c-application

./: Makefile.am  Makefile.in  build_bluez_library_and_app  configure  configure.ac
APP_BLUETOOTH/: Makefile.am  Makefile.in  main.c  registrar_rfcomm.c  registrar_rfcomm.h
